# drupal_aws

./: README.md  create_instance.py  create_securty_group.py  ec2.py  list_instances.py  pyproject.toml  terminate_instance.py
